# Data-Science

./: README.md  pyproject.toml
Classes/: Collections.py
Classes/MatplotLib/: plot_barrs.py  plot_lines.py  plot_pizza.py  plot_scatter.py
Classes/NumPy/: NumPy.py  NumPy_Data_Set.py  NumPy_Quick_Reference.py
Classes/Pandas/: class_01.py
Classes/TimeSeries/: main.py
Data/: retail_index_br.csv
Exercises/Basics/: att_01.py  att_06.py
Exercises/Collections/: att_01.py  att_02.py  att_03.py  att_04.py  att_05.py
Exercises/Extra/: att.py
Exercises/MatplotLib/: att_01.py  att_02.py  att_03.py
Exercises/NumPy/: att_02.py  att_04.py
Exercises/NumPy/Part_02/: att_01.py  att_03.py  att_05.py
Exercises/NumPy/Part_03/: att_01.py  att_02.py  att_03.py  att_04.py  att_05.py
Exercises/Pandas/: att_03.py  att_04.py  att_05.py  att_06.py  att_08.py
Exercises/Pandas_01/: att_01.py  att_02.py
Exercises/Pandas_02/: att_07.py
Exercises/Pandas_03/: att_01.py  att_02.py  att_03.py  att_04.py  att_05.py
Exercises/TimeSeries/: att_01.py
Python/Basics/: Arithmetic.py  Decisions.py  Input.py  Loop.py
Python/Exercises/: att_02.py  att_03.py  att_04.py  att_05.py
Python/Modules/: Numpy.py  Sys.py  Time.py
